add some margin to our-services

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">A propos</a>
@@ -154,7 +154,7 @@
                 <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             </div>
             <div class="row text-center">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-3">
                     <div class="service-box">
                         <div class="card">
                             <i class="fa fa-home icon"></i>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-3">
                     <div class="service-box">
                         <div class="card">
                             <i class="fa fa-search icon" style="color: hsl(240, 100%, 50%);"></i>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-3">
                     <div class="service-box">
                         <div class="card">
                             <i class="fa-solid fa-chart-simple icon" style="color: hsl(120, 87%, 54%);"></i>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-3">
                     <div class="service-box">
                         <div class="card">
                             <i class="fa-solid fa-building-columns icon" style="color: hsl(39, 96%, 47%);"></i>
