add some styling

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Agence d'immobilier</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+    <!-- Font Awesome icons -->
     <link rel="stylesheet" href="assets/icons/all.min.css">
-    <!-- CSS -->
+    <!-- My Css -->
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
