--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="assets/images/logo.png" class="im-fluid" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
-                    aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fa-solid fa-bars"></i>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
@@ -58,7 +58,7 @@
                 <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
@@ -241,7 +241,7 @@
         </div>
     </div>
 
-    <footer class="footer pt-5 pb-2">
+    <footer class="footer pt-5 pb-2 ">
         <div class="container">
             <div class="row ">
                 <div class="col-md-4">
@@ -251,7 +251,7 @@
                         Nous vous aidons à trouver la propriété idéale ou à vendre votre bien au meilleur prix.
                     </p>
                 </div>
-                <div class="col-md-4 ps-5">
+                <div class="col-md-4">
                     <h2 class="pb-1">Links</h2>
                     <ul class="list-unstyled links">
                         <li><a href="index.html" class="text-white-50">Home</a></li>
@@ -268,8 +268,8 @@
                     <p class="text-white-50">
                         <i class="fa fa-phone-alt pe-2"></i> +1 123 456 7890
                     </p>
-                    <a href="#" class="btn rounded-pill main-btn btn-primary w-100 mt-3">graphberry@gmail.com</a>
-                    <ul class="d-flex mt-4 list-unstyled gap-5">
+                    <a href="#" class="btn rounded-pill main-btn btn-primary w-100 mt-3">anass@gmail.com</a>
+                    <ul class="d-flex mt-5 list-unstyled gap-4 justify-content-center justify-content-md-start">
                         <li>
                             <a href="#" class="d-block text-light">
                                 <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i>
