--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/icons/all.min.css">
     <!-- My Css -->
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
 <body>
@@ -26,10 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item  active">
-                            <a class="nav-link nav-links active" href="#">Home</a>
+                            <a class="nav-link nav-links active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="#">A propos</a>
+                            <a class="nav-link nav-links" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-links" href="#">Services</a>
