--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                             <a class="nav-link nav-links" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="#">Services</a>
+                            <a class="nav-link nav-links" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="#">Contact</a>
+                            <a class="nav-link nav-links" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
