--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="assets/icons/all.min.css">
     <!-- My Css -->
-    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/services.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
@@ -31,10 +31,10 @@
                             <a class="nav-link nav-links" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links active" href="about.html">About</a>
+                            <a class="nav-link nav-links" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-links" href="services.html">Services</a>
+                            <a class="nav-link nav-links active" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-links" href="contact.html">Contact</a>
@@ -44,84 +44,64 @@
             </div>
         </nav>
     </header>
-    <main class="landing-page pt-5 mb-5">
-        <div class="main-text text-white-50">
-            <h1>A propos de notre Agence</h1>
+    <main class="landing-page mb-5">
+        <div class="main-text text-white-50 text-center">
+            <h1>Nos Services</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             <div class="d-flex justify-content-center">
                 <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
             </div>
         </div>
     </main>
-    <div class="history mb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 class="pb-2">Notre histoire</h2>
-                    <p class="text-black-50">
-                        Notre Histoire Fondée en 2005, notre agence immobilière a débuté avec une vision simple: 
-                        rendre le processus d'achat et de vente de propriétés aussi transparent et simple que possible
-                        pour nos clients.
-                        Au fil des années, nous avons construit une réputation solide basée sur notre expertise
-                        du marché local et notre engagement envers un service client exceptionnel Notre équipe a grandi,
-                        mais nos valeurs fondamentales restent les mêmes.
-                        Aujourd'hui, nous sommes fiers d'être l'une des agences immobilières les plus respectées 
-                        de la région, avec des milliers de transactions réussies et de clients satisfaits.
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <img src="assets/images/villa.jpg" class="img-fluid" alt="history-image">
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="nos-valuer pt-5 pb-5">
+    <div class="main-services pt-3 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Nos Valuers</h2>
+                <h2>Services pricipaux</h2>
                 <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4 mb-3">
-                    <div class="service-box">
-                        <div class="card">
-                            <i class="fa-solid fa-handshake icon" style="color: #007bff;"></i>
-                            <div class="card-body">
-                                <h5 class="card-title mb-3">Intégrité</h5>
-                                <p class="card-text">
-                                    Nous croyons en une transparence totale et une honnêteté 
-                                    sans compromis dans toutes nos transactions
-                                </p>
-                            </div>
+            <div class="row">
+                <!-- Card 1 -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Property 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="service-box">
-                        <div class="card">
-                            <i class="fa-solid fa-star icon" style="color: #ffc107;"></i>
-                            <div class="card-body">
-                                <h5 class="card-title mb-3">Excellence</h5>
-                                <p class="card-text">
-                                    Nous nous efforçons d'offrir un service exceptionnel qui 
-                                    dépasse les attentes de nos clients à chaque fois.
-                                </p>
-                            </div>
+                <!-- Card 2 -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Property 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <div class="service-box">
-                        <div class="card">
-                            <i class="fa-solid fa-users icon" style="color: #28a745;"></i>
-                            <div class="card-body">
-                                <h5 class="card-title mb-3">Communauté</h5>
-                                <p class="card-text">
-                                    Nous sommes dévoués à servir et soutenir les communautés dans 
-                                    lesquelles nous vivons et travaillons.
-                                </p>
-                            </div>
+                <!-- Card 3 -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Property 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <a href="#" class="btn btn-primary rounded-pill">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 4 -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Property 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +109,7 @@
         </div>
     </div>
 
-    <div class="equipe pt-5 pb-5">
+    <div class="equipe pt-5 pb-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
                 <h2>Notre Équipe</h2>
@@ -145,30 +125,6 @@
                                     <h6 class="mb-0">Luxury Waterfront Villa</h6>
                                     <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
                                 </div>
-                                <div class="row">
-                                    <ul class="d-flex list-unstyled justify-content-center gap-4">
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-facebook facebook rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-twitter twitter rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-linkedin linkedin rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-youtube youtube rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -181,30 +137,6 @@
                                 <div class="card-text">
                                     <h6 class="mb-0">Modern Downtown Apartement</h6>
                                     <p class="text-black-50">456 Central Ave, Downtown</p>
-                                </div>
-                                <div class="row">
-                                    <ul class="d-flex list-unstyled justify-content-center gap-4">
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-facebook facebook rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-twitter twitter rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-linkedin linkedin rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-youtube youtube rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -219,29 +151,44 @@
                                     <h6 class="mb-0">Spacious Family Home</h6>
                                     <p class="text-black-50">789 Oak Street, West Hills</p>
                                 </div>
-                                <div class="row">
-                                    <ul class="d-flex list-unstyled justify-content-center gap-4">
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-facebook facebook rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-twitter twitter rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-linkedin linkedin rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="d-block text-light">
-                                                <i class="fa-brands fa-youtube youtube rounded-circle p-2"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="feature-box">
+                        <div class="card">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <div class="card-body">
+                                <div class="card-text text-center">
+                                    <h6 class="mb-0">Luxury Waterfront Villa</h6>
+                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="feature-box">
+                        <div class="card">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <div class="card-body text-center">
+                                <div class="card-text">
+                                    <h6 class="mb-0">Modern Downtown Apartement</h6>
+                                    <p class="text-black-50">456 Central Ave, Downtown</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="feature-box">
+                        <div class="card">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <div class="card-body text-center">
+                                <div class="card-text">
+                                    <h6 class="mb-0">Spacious Family Home</h6>
+                                    <p class="text-black-50">789 Oak Street, West Hills</p>
                                 </div>
                             </div>
                         </div>
@@ -249,8 +196,42 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <div class="reason pt-5 pb-5">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2>Pourquois Nous Choisir</h2>
+                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/images/villa.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Expertise locale</h5>
+                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                        </div>
+                        <div class="col-md-12">
+                            <h5>Expertise locale</h5>
+                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                        </div>
+                        <div class="col-md-12">
+                            <h5>Expertise locale</h5>
+                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                        </div>
+                        <div class="col-md-12">
+                            <h5>Expertise locale</h5>
+                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer pt-5 pb-2 ">
         <div class="container">
             <div class="row ">
