--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="assets/images/logo.png" class="im-fluid" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" class="im-fluid" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
@@ -112,7 +112,7 @@
     <div class="equipe pt-5 pb-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Notre Équipe</h2>
+                <h2>Services Complémentaires</h2>
                 <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
             </div>
             <div class="row">
