add footer and header template

--- a/contact.html
+++ b/contact.html
@@ -17,34 +17,7 @@
 
 <body class="bg-light">
 
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" class="im-fluid" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item  active">
-                            <a class="nav-link nav-links" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-links" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-links" href="services.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-links active" href="contact.html">Contact</a>
-                        </li>
-                        
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <special-header></special-header>
 
     <main class="landing-page mb-5">
         <div class="main-text text-white-50 text-center">
@@ -124,6 +97,7 @@
         </div>
     </div>
 
+    <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
