--- a/properties.html
+++ b/properties.html
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=1" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=2" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=3" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=4" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=5" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="property-details.html" class="btn btn-outline-primary w-100">View Details</a>
+                                <a href="property-details.html?id=6" class="btn btn-outline-primary w-100">View Details</a>
                             </div>
                         </div>
                     </div>
